# LDAF

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
ldaf/: metrics.py  utils.py
ldaf/compression/: distill.py  pruning.py  qat.py
ldaf/data/: synthetic.py  utils.py
ldaf/models/: encoders.py  gmf.py  ldaf.py  tac.py
scripts/: test.py  train.py
